Chenges for antigravity